gcc/testsuite/g++.dg/modules/atom-decl-1.C
// { dg-options "-fmodules-atom" }

int i;

module thing; // { dg-error "must be first" }
